--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Golibroda Barbershop</title>
+    <link rel="stylesheet" href="style.css">
   </head>
-  <body></body>
+  <body>
+    <header>
+        <img src="Logo/logo.JPG" class="logo-img">
+      <nav>
+        <ul class="nav-bar">
+          <li>
+            <a href="index.html" class="active">Strona Główna</a>
+          </li>
+          <li>
+            <a href="gallery.html">Galeria</a>
+          </li>
+          <li><a href="contact.html">Kontakt</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="main">
+        <div class="bx-menu"><img src="icons/menu-line.png" class="menu-icon"></div>
+      </div>
+  </body>
 </html>
