Add animated background

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Golibroda Barbershop</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="background-image"></div>
     <header>
-        <img src="Logo/logo.JPG" class="logo-img">
+      <img src="Logo/logo.JPG" class="logo-img" />
       <nav>
         <ul class="nav-bar">
           <li>
@@ -17,12 +18,20 @@
           <li>
             <a href="gallery.html">Galeria</a>
           </li>
-          <li><a href="contact.html">Kontakt</a>
-          </li>
+          <li><a href="contact.html">Kontakt</a></li>
         </ul>
       </nav>
       <div class="main">
-        <div class="bx-menu"><img src="icons/menu-line.png" class="menu-icon"></div>
+        <div class="bx-menu">
+          <img src="icons/icons8-menu-50.png" class="menu-icon" />
+        </div>
       </div>
+    </header>
+    <section id="wrapper">
+      <section class="introduce">
+        <h1>Fryzjer męski - Janów Lubelski Wesoła 19</h1>
+      </section>
+    </section>
+    <script src="main.js"></script>
   </body>
 </html>
