create css directory and add new css file to homepage

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Golibroda Barbershop</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/global.css" />
+    <link rel="stylesheet" href="css/homepage.css" />
   </head>
   <body>
     <div class="background-image"></div>
@@ -27,11 +28,7 @@
         </div>
       </div>
     </header>
-    <section id="wrapper">
-      <section class="introduce">
-        <h1>Fryzjer męski - Janów Lubelski Wesoła 19</h1>
-      </section>
-    </section>
+
     <script src="main.js"></script>
   </body>
 </html>
