modify homepage, add welcome tab

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="css/homepage.css" />
   </head>
   <body>
-    <div class="background-image"></div>
     <header>
-      <img src="Logo/logo.JPG" class="logo-img" />
+      <img src="logo/logo.JPG" class="logo-img" />
       <nav>
         <ul class="nav-bar">
           <li>
@@ -28,7 +27,18 @@
         </div>
       </div>
     </header>
-
+    <div class="background-image">
+      <section id="wrapper">
+        <section id="introduce">
+          <div class="title">
+            <h1>GOLIBRODA BARBERSHOP</h1>
+          </div>
+          <div class="about-us">
+            <h3>FRYZJER MĘSKI - JANÓW LUBELSKI WESOŁA 19</h3>
+          </div>
+        </section>
+      </section>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
