--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Golibroda Barbershop</title>
     <link rel="stylesheet" href="css/global.css" />
     <link rel="stylesheet" href="css/homepage.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;500&family=Poppins:wght@500;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -29,12 +35,24 @@
     </header>
     <div class="background-image">
       <section id="wrapper">
-        <section id="introduce">
-          <div class="title">
-            <h1>GOLIBRODA BARBERSHOP</h1>
+        <div class="title">
+          <h1>GOLIBRODA BARBERSHOP</h1>
+        </div>
+        <section id="about-us">
+          <div class="about-us-text">
+            <h3>
+              Jesteśmy fryzjerem tylko dla mężczyzn! Naszymi specjalnościami są
+              tradycyjne strzyżenia męskie oraz usługi barberskie takie jak:
+              golenie brzytwą czy strzyżenie brody. Jednak pod słowem barber nie
+              kryje się tylko strzyżenie czy golenie, ale także modelowanie oraz
+              pielęgnacja.
+            </h3>
           </div>
-          <div class="about-us">
-            <h3>FRYZJER MĘSKI - JANÓW LUBELSKI WESOŁA 19</h3>
+          <div class="about-us-picture">
+            <img
+              src="main-page-photos/about-us-photo.jpg"
+              class="abt-us-photo"
+            />
           </div>
         </section>
       </section>
