add about us section

--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
             <a href="index.html" class="active">Strona Główna</a>
           </li>
           <li>
-            <a href="gallery.html">Galeria</a>
+            <a href="gallery.html">Usługi</a>
           </li>
+          <li><a href="contact.html">O nas</a></li>
           <li><a href="contact.html">Kontakt</a></li>
+          <li><a href="contact.html">Galeria</a></li>
         </ul>
       </nav>
       <div class="main">
@@ -40,19 +42,32 @@
         </div>
         <section id="about-us">
           <div class="about-us-text">
-            <h3>
-              Jesteśmy fryzjerem tylko dla mężczyzn! Naszymi specjalnościami są
+            <p>
+              <span>GOLIBRODA BARBERSHOP</span> to fryzjer tylko dla mężczyzn!
+              Cechuje nas dokładność oraz precyzja, nasi klienci zawsze wychodzą
+              od nas odświeżeni i zadowoleni. Naszymi specjalnościami są
               tradycyjne strzyżenia męskie oraz usługi barberskie takie jak:
               golenie brzytwą czy strzyżenie brody. Jednak pod słowem barber nie
               kryje się tylko strzyżenie czy golenie, ale także modelowanie oraz
-              pielęgnacja.
-            </h3>
+              pielęgnacja - w czym jesteśmy najlepsze!
+            </p>
           </div>
           <div class="about-us-picture">
             <img
               src="main-page-photos/about-us-photo.jpg"
               class="abt-us-photo"
             />
+          </div>
+        </section>
+        <section id="more-services">
+          <div class="about-us-picture">
+            <img
+              src="main-page-photos/about-us-photo.jpg"
+              class="abt-us-photo"
+            />
+          </div>
+          <div class="about-us-text">
+            <p>Oprócz</p>
           </div>
         </section>
       </section>
