git add "uslugi"

--- a/index.html
+++ b/index.html
@@ -59,16 +59,11 @@
             />
           </div>
         </section>
-        <section id="more-services">
-          <div class="about-us-picture">
-            <img
-              src="main-page-photos/about-us-photo.jpg"
-              class="abt-us-photo"
-            />
-          </div>
-          <div class="about-us-text">
-            <p>Oprócz</p>
-          </div>
+        <section id="promotion">
+          <p>
+            <h2><span>Interesuję Cię</span> cennik i charakterystyka poszczególnych strzyżeń? Sprawdź zakładkę <br></h2>
+            <span class="usluga"><a href="uslugi.html">Usługi</a>
+          </p>
         </section>
       </section>
     </div>
