--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
             <span class="usluga"><a href="uslugi.html">Usługi</a>
           </p>
         </section>
+        <section id="our-services">
+          <div class="our-services-picture">
+            <img
+              src="main-page-photos/opalanie-uszu.jpg"
+              class="our-services-photo"/>
+          </div>
+          <p>
+            <span> Barber to nie tylko strzyżenie! <br> </span>
+            "Świeża" fryzura oraz wytrymowany zarost to dopiero połowa sukcesu. Warto też zadbać o 
+          </p>
+        </div>
+        </section>
       </section>
     </div>
     <script src="main.js"></script>
