--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section id="promotion">
           <p>
             <h2><span>Interesuję Cię</span> cennik i charakterystyka poszczególnych strzyżeń? Sprawdź zakładkę <br></h2>
-            <span class="usluga"><a href="uslugi.html">Usługi</a>
+            <span class="usluga"><a href="uslugi.html" target="_blank">Usługi</a>
           </p>
         </section>
         <section id="our-services">
@@ -73,7 +73,7 @@
           </div>
           <p>
             <span> Barber to nie tylko strzyżenie! <br> </span>
-            "Świeża" fryzura oraz wytrymowany zarost to dopiero połowa sukcesu. Warto też zadbać o 
+            "Świeża" fryzura oraz wytrymowany zarost to dopiero połowa sukcesu. Wielu mężczyzn o tym zapomina, ale depilacja to bardzo ważny element w wyglądzie mężczyzny, a chyba każdy chce wyglądać dobrze, dlatego oprócz strzyżenia, oferujemy także depilację nosa czy uszu w formie klasycznej, jak i w efektownej metodzie "opalania uszu ogniem".
           </p>
         </div>
         </section>
