add promotion second promotion section

--- a/index.html
+++ b/index.html
@@ -75,8 +75,13 @@
             <span> Barber to nie tylko strzyżenie! <br> </span>
             "Świeża" fryzura oraz wytrymowany zarost to dopiero połowa sukcesu. Wielu mężczyzn o tym zapomina, ale depilacja to bardzo ważny element w wyglądzie mężczyzny, a chyba każdy chce wyglądać dobrze, dlatego oprócz strzyżenia, oferujemy także depilację nosa czy uszu w formie klasycznej, jak i w efektownej metodzie "opalania uszu ogniem".
           </p>
-        </div>
         </section>
+        <section id="promotion">
+          <p>
+            <h2><span>Chcesz umówić się na wizytę?</span> Sprawdź zakładkę: <br></h2>
+            <span class="usluga"><a href="kontakt.html" target="_blank">Kontakt</a>
+          </p>
+        </section>  
       </section>
     </div>
     <script src="main.js"></script>
