add for-kids section

--- a/index.html
+++ b/index.html
@@ -81,6 +81,18 @@
             <h2><span>Chcesz umówić się na wizytę?</span> Sprawdź zakładkę: <br></h2>
             <span class="usluga"><a href="kontakt.html" target="_blank">Kontakt</a>
           </p>
+        </section>
+        <section id="for-kids">
+          <div class="for-kids-picture">
+            <img
+              src="main-page-photos/auto.jpg"
+              class="for-kids-photo"/>
+          </div>
+          <p>
+            <span> Jesteśmy otwarci dla najmłodszych! <br> </span>
+            
+            W odróżnieniu od wielu innych barberów, oprócz mężczyzn, strzyżemy także dzieci. Z doświadczenia wiemy, jaki stres towarzyszy najmłodszym w tego typu wizytach, dlatego mamy dla nich specjalnie przygotowany auto-fotelik który ma na celu zajęcie uwagi  oraz sprawić wiele radości Waszej pociesze, podczas gdy my wykonujemy usługę.
+          </p>
         </section>  
       </section>
     </div>
