--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </section>
         <section id="promotion">
           <p>
-            <h2><span>Chcesz umówić się na wizytę?</span> Sprawdź zakładkę: <br></h2>
+            <h2><span>Chcesz umówić się na wizytę?</span> Sprawdź zakładkę<br></h2>
             <span class="usluga"><a href="kontakt.html" target="_blank">Kontakt</a>
           </p>
         </section>
@@ -93,9 +93,43 @@
             
             W odróżnieniu od wielu innych barberów, oprócz mężczyzn, strzyżemy także dzieci. Z doświadczenia wiemy, jaki stres towarzyszy najmłodszym w tego typu wizytach, dlatego mamy dla nich specjalnie przygotowany auto-fotelik który ma na celu zajęcie uwagi  oraz sprawić wiele radości Waszej pociesze, podczas gdy my wykonujemy usługę.
           </p>
-        </section>  
+        </section>
       </section>
-    </div>
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="footer-column">
+              <ul>
+                <h3>Kontakt</h3>
+                <li><a href="#"><img src="icons/telephone.png" class="footer-icon"><span>ul. Wesoła 19 Janów Lubelski</span></a></li>
+                <li><a href="#"><img src="icons/telephone.png" class="footer-icon">+48 601 601 601 </a></li>
+                <li><a href="#"><img src="icons/telephone.png" class="footer-icon">golibrodabarbershop@gmail.com</a></li>
+              </ul>
+            </div>
+            <div class="footer-column">
+              <h3>Godziny otwarcia</h3>
+              <ul>
+                <li><a href="#">Poniedziałek - piątek: 10:00 - 18:00
+                  Sobota: nieczynne lub szkolenia zamknięte
+                  Niedziela: nieczynne lub szkolenia zamknięte</a></li>
+              </ul>
+            </div>
+            <div class="footer-column">
+              <h3>Informacje</h3>
+              <ul>
+                <li><a href="#"></a></li>
+              </ul>
+            </div>
+            <div class="footer-column">
+              <h3>Obserwuj nas</h3>
+              <ul>
+                <li><a href="#"></a></li>
+              </ul>
+            </div>
+          </div>
+         </div>
+      </footer>  
+    </div> 
     <script src="main.js"></script>
   </body>
 </html>
