--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section id="promotion">
           <p>
             <h2><span>Interesuję Cię</span> cennik i charakterystyka poszczególnych strzyżeń? Sprawdź zakładkę <br></h2>
-            <span class="usluga"><a href="uslugi.html" target="_blank">Usługi</a>
+            <a href="uslugi.html" target="_blank" class="usluga">Usługi</a>
           </p>
         </section>
         <section id="our-services">
@@ -71,15 +71,17 @@
               src="main-page-photos/opalanie-uszu.jpg"
               class="our-services-photo"/>
           </div>
+          <div class="about-us-text">
           <p>
             <span> Barber to nie tylko strzyżenie! <br> </span>
             "Świeża" fryzura oraz wytrymowany zarost to dopiero połowa sukcesu. Wielu mężczyzn o tym zapomina, ale depilacja to bardzo ważny element w wyglądzie mężczyzny, a chyba każdy chce wyglądać dobrze, dlatego oprócz strzyżenia, oferujemy także depilację nosa czy uszu w formie klasycznej, jak i w efektownej metodzie "opalania uszu ogniem".
           </p>
+        </div>
         </section>
         <section id="promotion">
           <p>
             <h2><span>Chcesz umówić się na wizytę?</span> Sprawdź zakładkę<br></h2>
-            <span class="usluga"><a href="kontakt.html" target="_blank">Kontakt</a>
+            <a href="kontakt.html" target="_blank" class="usluga">Kontakt</a>
           </p>
         </section>
         <section id="for-kids">
@@ -88,11 +90,12 @@
               src="main-page-photos/auto.jpg"
               class="for-kids-photo"/>
           </div>
-          <p>
-            <span> Jesteśmy otwarci dla najmłodszych! <br> </span>
-            
-            W odróżnieniu od wielu innych barberów, oprócz mężczyzn, strzyżemy także dzieci. Z doświadczenia wiemy, jaki stres towarzyszy najmłodszym w tego typu wizytach, dlatego mamy dla nich specjalnie przygotowany auto-fotelik który ma na celu zajęcie uwagi  oraz sprawić wiele radości Waszej pociesze, podczas gdy my wykonujemy usługę.
-          </p>
+          <div class="about-us-text">
+            <p>
+              <span> Jesteśmy otwarci dla najmłodszych! <br> </span>
+              W odróżnieniu od wielu innych barberów, oprócz mężczyzn, strzyżemy także dzieci. Z doświadczenia wiemy, jaki stres towarzyszy najmłodszym w tego typu wizytach, dlatego mamy dla nich specjalnie przygotowany auto-fotelik który ma na celu zajęcie uwagi  oraz sprawić wiele radości Waszej pociesze, podczas gdy my wykonujemy usługę.
+            </p>
+          </div>
         </section>
       </section>
       <footer>
@@ -101,25 +104,25 @@
             <div class="footer-column">
               <ul>
                 <h3>Kontakt</h3>
-                <li><a href="#"><img src="icons/telephone.png" class="footer-icon"><span>ul. Wesoła 19 Janów Lubelski</span></a></li>
-                <li><a href="#"><img src="icons/telephone.png" class="footer-icon">+48 601 601 601 </a></li>
-                <li><a href="#"><img src="icons/telephone.png" class="footer-icon">golibrodabarbershop@gmail.com</a></li>
+                <li><a href="#"><img src="icons/point.png" class="footer-icon"><span>ul. Wesoła 19 Janów Lubelski</span></a></li>
+                <li><a href="#"><img src="icons/telephone.png" class="footer-icon"><span>+48 601 601 601</span> </a></li>
+                <li><a href="#"><img src="icons/email.png" class="footer-icon"><span>Golibroda_barbershop99</span></a></li>
               </ul>
             </div>
             <div class="footer-column">
               <h3>Godziny otwarcia</h3>
               <ul>
-                <li><a href="#">Poniedziałek - piątek: 10:00 - 18:00
-                  Sobota: nieczynne lub szkolenia zamknięte
-                  Niedziela: nieczynne lub szkolenia zamknięte</a></li>
+                <li><a href="#">Poniedziałek - piątek: 10:00 - 18:00<br>
+                  Sobota: 10:00 - 16:00 <br>
+                  Niedziela: nieczynne</a></li>
               </ul>
             </div>
-            <div class="footer-column">
+            <!-- <div class="footer-column">
               <h3>Informacje</h3>
               <ul>
                 <li><a href="#"></a></li>
               </ul>
-            </div>
+            </div> -->
             <div class="footer-column">
               <h3>Obserwuj nas</h3>
               <ul>
