--- a/index.html
+++ b/index.html
@@ -104,17 +104,21 @@
             <div class="footer-column">
               <ul>
                 <h3>Kontakt</h3>
-                <li><a href="#"><img src="icons/point.png" class="footer-icon"><span>ul. Wesoła 19 Janów Lubelski</span></a></li>
-                <li><a href="#"><img src="icons/telephone.png" class="footer-icon"><span>+48 601 601 601</span> </a></li>
-                <li><a href="#"><img src="icons/email.png" class="footer-icon"><span>Golibroda_barbershop99</span></a></li>
+                <li><img src="icons/point.png" class="footer-icon"><span>ul. Wesoła 19 Janów Lubelski</span></li>
+                <li><img src="icons/telephone.png" class="footer-icon"><span>+48 601 601 601</span></li>
+                <li><img src="icons/email.png" class="footer-icon"><span>Golibroda_barbershop99</span></li>
               </ul>
             </div>
             <div class="footer-column">
               <h3>Godziny otwarcia</h3>
               <ul>
-                <li><a href="#">Poniedziałek - piątek: 10:00 - 18:00<br>
-                  Sobota: 10:00 - 16:00 <br>
-                  Niedziela: nieczynne</a></li>
+                <li>Poniedziałek: 11:00 - 19:00<br></li>
+                <li>Wtorek: 09:00 - 17:00<br></li>
+                <li>Środa: 09:00 - 17:00<br></li>
+                <li>Czwartek: 11:00 - 19:00<br></li>
+                <li>Piątek: 12:00 - 20:00<br></li>
+                <li>Sobota: 09:00 - 17:00<br></li>
+                <li>Niedziela: nieczynne<br></li>
               </ul>
             </div>
             <!-- <div class="footer-column">
@@ -125,9 +129,11 @@
             </div> -->
             <div class="footer-column">
               <h3>Obserwuj nas</h3>
-              <ul>
-                <li><a href="#"></a></li>
-              </ul>
+                <a href="https://www.facebook.com/profile.php?id=100093480534630" target="_blank"><img src="icons/facebook.png" class="follow-icon"> </a>
+                <a href="https://www.instagram.com/golibroda_barbershop/?igshid=MzRlODBiNWFlZA%3D%3D&fbclid=IwAR3osT0hefR2XiRcmOOPeTXakkgLGWxyiZpIelZqGJl1OzgiYZVqMAZ45aM" target="_blank"><img src="icons/instagram.png" class="follow-icon"> </a>
+            </div>
+            <div class="footer-column">
+                <p class="copyright">Copyright ©2023 All rights reserved</p>
             </div>
           </div>
          </div>
