--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <a href="index.html" class="active">Strona Główna</a>
           </li>
           <li>
-            <a href="gallery.html">Usługi</a>
+            <a href="services.html">Usługi</a>
           </li>
-          <li><a href="contact.html">O nas</a></li>
+          <li><a href="about-us.html">O nas</a></li>
           <li><a href="contact.html">Kontakt</a></li>
-          <li><a href="contact.html">Galeria</a></li>
+          <li><a href="gallery.html">Galeria</a></li>
         </ul>
       </nav>
       <div class="main">
