add media query, 1200width+

--- a/index.html
+++ b/index.html
@@ -35,14 +35,20 @@
         </div>
       </div>
     </header>
-    <div class="background-image">
+    <div class="wrapper">
         <div class="title">
           <h1>GOLIBRODA BARBERSHOP</h1>
         </div>
         <section id="about-us">
+          <div class="picture-container">
+            <img
+              src="main-page-photos/about-us-photo.jpg"
+              class="abt-us-photo"
+            />
+          </div>
           <div class="about-us-text">
             <p>
-              <span>GOLIBRODA BARBERSHOP</span> to fryzjer tylko dla mężczyzn!
+              <span>GOLIBRODA BARBERSHOP</span> <br>to fryzjer tylko dla mężczyzn!
               Cechuje nas dokładność oraz precyzja, nasi klienci zawsze wychodzą
               od nas odświeżeni i zadowoleni. Naszymi specjalnościami są
               tradycyjne strzyżenia męskie oraz usługi barberskie takie jak:
@@ -51,12 +57,7 @@
               pielęgnacja - w czym jesteśmy najlepsze!
             </p>
           </div>
-          <div class="about-us-picture">
-            <img
-              src="main-page-photos/about-us-photo.jpg"
-              class="abt-us-photo"
-            />
-          </div>
+      
         </section>
         <section id="promotion">
           <p>
@@ -65,7 +66,7 @@
           </p>
         </section>
         <section id="our-services">
-          <div class="our-services-picture">
+          <div class="picture-container">
             <img
               src="main-page-photos/opalanie-uszu.jpg"
               class="our-services-photo"/>
@@ -84,7 +85,7 @@
           </p>
         </section>
         <section id="for-kids">
-          <div class="for-kids-picture">
+          <div class="picture-container">
             <img
               src="main-page-photos/auto.jpg"
               class="for-kids-photo"/>
@@ -121,11 +122,13 @@
             </div>
             <div class="footer-column">
               <h3>Obserwuj nas</h3>
+              <ul>
                 <a href="https://www.facebook.com/profile.php?id=100093480534630" target="_blank"><img src="icons/facebook.png" class="follow-icon"> </a>
                 <a href="https://www.instagram.com/golibroda_barbershop/?igshid=MzRlODBiNWFlZA%3D%3D&fbclid=IwAR3osT0hefR2XiRcmOOPeTXakkgLGWxyiZpIelZqGJl1OzgiYZVqMAZ45aM" target="_blank"><img src="icons/instagram.png" class="follow-icon"> </a>
+              </ul>
             </div>
             <div class="footer-column">
-                <p class="copyright">Copyright ©2023 All rights reserved</p>
+                <p class="copyright"> Copyright ©2023 All rights reserved</p>
             </div>
           </div>
          </div>
