create a new css file that contains header&footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Golibroda Barbershop</title>
     <link rel="stylesheet" href="css/global.css" />
     <link rel="stylesheet" href="css/homepage.css" />
+    <link rel="stylesheet" href="css/header_and_footer.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -40,7 +41,7 @@
           <h1>GOLIBRODA BARBERSHOP</h1>
         </div>
         <section id="about-us">
-          <div class="picture-container">
+          <div class="picture-container"> 
             <img
               src="main-page-photos/about-us-photo.jpg"
               class="abt-us-photo"
