--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="title">
           <h1>GOLIBRODA BARBERSHOP</h1>
         </div>
-        <section id="about-us">
+        <section class="about-us">
           <div class="picture-container"> 
             <img
               src="main-page-photos/about-us-photo.jpg"
@@ -60,13 +60,13 @@
           </div>
       
         </section>
-        <section id="promotion">
+        <section class="promotion">
           <p>
             <h2><span>Interesuję Cię</span> cennik i charakterystyka poszczególnych strzyżeń? Sprawdź zakładkę <br></h2>
             <a href="uslugi.html" target="_blank" class="usluga">Usługi</a>
           </p>
         </section>
-        <section id="our-services">
+        <section class="our-services">
           <div class="picture-container">
             <img
               src="main-page-photos/opalanie-uszu.jpg"
@@ -79,13 +79,13 @@
           </p>
         </div>
         </section>
-        <section id="promotion">
+        <section class="promotion">
           <p>
             <h2><span>Chcesz umówić się na wizytę?</span> Sprawdź zakładkę<br></h2>
             <a href="kontakt.html" target="_blank" class="usluga">Kontakt</a>
           </p>
         </section>
-        <section id="for-kids">
+        <section class="for-kids">
           <div class="picture-container">
             <img
               src="main-page-photos/auto.jpg"
