--- a/about-us.html
+++ b/about-us.html
@@ -6,6 +6,7 @@
     <title>Golibroda Barbershop</title>
     <link rel="stylesheet" href="css/global.css" />
     <link rel="stylesheet" href="css/about-us.css" />
+    <link rel="stylesheet" href="css/header_and_footer.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
