add content to services on mobile phones

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
       </div>
     </header>
-    <div class="wrapper">
+    <section class="wrapper">
         <div class="title">
           <h1>GOLIBRODA BARBERSHOP</h1>
         </div>
@@ -106,7 +106,7 @@
                 <h3>Kontakt</h3>
                 <li><img src="icons/point.png" class="footer-icon"><span>ul. Wesoła 19 Janów Lubelski</span></li>
                 <li><img src="icons/telephone.png" class="footer-icon"><span>+48 601 601 601</span></li>
-                <li><img src="icons/email.png" class="footer-icon"><span>Golibroda_barbershop99</span></li>
+                <li><img src="icons/email.png" class="footer-icon"><span>Golibroda_barbershop99@gmail.com</span></li>
               </ul>
             </div>
             <div class="footer-column">
@@ -134,7 +134,7 @@
           </div>
          </div>
       </footer>  
-    </div> 
+    </section> 
     <script src="main.js"></script>
   </body>
 </html>
