--- a/services.html
+++ b/services.html
@@ -36,41 +36,182 @@
         </div>
       </div>
     </header>
+    <section class="wrapper">
+      <div class="title">
+        <h1>Strzyżenie Męskie? TO NASZA PASJA!</h1>
+      </div>
+      <section class="what-we-offer">
+        <table>
+          <caption>
+            <h2>Nasz cennik</h2>
+          </caption>
+          <tr>
+            <td>
+              <h3>Strzyżenie klasyczne</h3>
+            </td>
+            <td>
+              <p>40zł</p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <h3>Strzyżenie włosów długich</h3>
+            </td>
+            <td>
+              <p>50zł</p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <h3>Strzyżenie dzieci do lat 13</h3>
+            </td>
+            <td>
+              <p>30zł</p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <h3>Odświeżanie brody</h3>
+            </td>
+            <td>
+              <p>40zł</p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <h3>Konturowanie brody</h3>
+            </td>
+            <td>
+              <p>25zł</p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <h3>Repigmentacja brody</h3>
+            </td>
+            <td>
+              <p>30zł</p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <h3>Broda po królewsku</h3>
+            </td>
+            <td>
+              <p>65zł</p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <h3>Combo</h3>
+            </td>
+            <td>
+              <p>80zł</p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <h3>Combo po królewsku</h3>
+            </td>
+            <td>
+              <p>120 zł</p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <h3>Łysy z brodą</h3>
+            </td>
+            <td>
+              <p>50zł</p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <h3>Ojciec + syn do lat 13</h3>
+            </td>
+            <td>
+              <p>60zł</p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <h3>Pielęgnacja</h3>
+            </td>
+            <td>
+              <p>40zł</p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <h3>Depilacja woskiem/Opalanie uszu</h3>
+            </td>
+            <td>
+              <p>75zł</p>
+            </td>
+          </tr>
+        </table>
+        <div class="picture-container">
+          <img src="zdjecia/services-photo.jpg" class="services-photo" />
+          <img src="zdjecia/services-photo-2.jpg" class="services-photo-n2" />
+        </div>
+      </section>
       <footer>
         <div class="container">
           <div class="row">
             <div class="footer-column">
               <ul>
                 <h3>Kontakt</h3>
-                <li><img src="icons/point.png" class="footer-icon"><span>ul. Wesoła 19 Janów Lubelski</span></li>
-                <li><img src="icons/telephone.png" class="footer-icon"><span>+48 601 601 601</span></li>
-                <li><img src="icons/email.png" class="footer-icon"><span>Golibroda_barbershop99</span></li>
+                <li>
+                  <img src="icons/point.png" class="footer-icon" /><span
+                    >ul. Wesoła 19 Janów Lubelski</span
+                  >
+                </li>
+                <li>
+                  <img src="icons/telephone.png" class="footer-icon" /><span
+                    >+48 601 601 601</span
+                  >
+                </li>
+                <li>
+                  <img src="icons/email.png" class="footer-icon" /><span
+                    >Golibroda_barbershop99@gmail.com</span
+                  >
+                </li>
               </ul>
             </div>
             <div class="footer-column">
               <h3>Godziny otwarcia</h3>
               <ul>
-                <li>Poniedziałek: 11:00 - 19:00<br></li>
-                <li>Wtorek: 09:00 - 17:00<br></li>
-                <li>Środa: 09:00 - 17:00<br></li>
-                <li>Czwartek: 11:00 - 19:00<br></li>
-                <li>Piątek: 12:00 - 20:00<br></li>
-                <li>Sobota: 09:00 - 17:00<br></li>
-                <li>Niedziela: nieczynne<br></li>
+                <li>Poniedziałek: 11:00 - 19:00<br /></li>
+                <li>Wtorek: 09:00 - 17:00<br /></li>
+                <li>Środa: 09:00 - 17:00<br /></li>
+                <li>Czwartek: 11:00 - 19:00<br /></li>
+                <li>Piątek: 12:00 - 20:00<br /></li>
+                <li>Sobota: 09:00 - 17:00<br /></li>
+                <li>Niedziela: nieczynne<br /></li>
               </ul>
             </div>
             <div class="footer-column">
               <h3>Obserwuj nas</h3>
-                <a href="https://www.facebook.com/profile.php?id=100093480534630" target="_blank"><img src="icons/facebook.png" class="follow-icon"> </a>
-                <a href="https://www.instagram.com/golibroda_barbershop/?igshid=MzRlODBiNWFlZA%3D%3D&fbclid=IwAR3osT0hefR2XiRcmOOPeTXakkgLGWxyiZpIelZqGJl1OzgiYZVqMAZ45aM" target="_blank"><img src="icons/instagram.png" class="follow-icon"> </a>
+              <ul>
+                <a
+                  href="https://www.facebook.com/profile.php?id=100093480534630"
+                  target="_blank"
+                  ><img src="icons/facebook.png" class="follow-icon" />
+                </a>
+                <a
+                  href="https://www.instagram.com/golibroda_barbershop/?igshid=MzRlODBiNWFlZA%3D%3D&fbclid=IwAR3osT0hefR2XiRcmOOPeTXakkgLGWxyiZpIelZqGJl1OzgiYZVqMAZ45aM"
+                  target="_blank"
+                  ><img src="icons/instagram.png" class="follow-icon" />
+                </a>
+              </ul>
             </div>
             <div class="footer-column">
-                <p class="copyright">Copyright ©2023 All rights reserved</p>
+              <p class="copyright">Copyright ©2023 All rights reserved</p>
             </div>
           </div>
-         </div>
-      </footer>  
-    </div> 
+        </div>
+      </footer>
+    </section>
     <script src="main.js"></script>
   </body>
 </html>
