--- a/services.html
+++ b/services.html
@@ -38,118 +38,120 @@
     </header>
     <section class="wrapper">
       <div class="title">
-        <h1>Strzyżenie Męskie? TO NASZA PASJA!</h1>
+        <h1>Strzyżenie Męskie?<br />TO NASZA PASJA!</h1>
       </div>
       <section class="what-we-offer">
-        <table>
-          <caption>
-            <h2>Nasz cennik</h2>
-          </caption>
-          <tr>
-            <td>
-              <h3>Strzyżenie klasyczne</h3>
-            </td>
-            <td>
-              <p>40zł</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h3>Strzyżenie włosów długich</h3>
-            </td>
-            <td>
-              <p>50zł</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h3>Strzyżenie dzieci do lat 13</h3>
-            </td>
-            <td>
-              <p>30zł</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h3>Odświeżanie brody</h3>
-            </td>
-            <td>
-              <p>40zł</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h3>Konturowanie brody</h3>
-            </td>
-            <td>
-              <p>25zł</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h3>Repigmentacja brody</h3>
-            </td>
-            <td>
-              <p>30zł</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h3>Broda po królewsku</h3>
-            </td>
-            <td>
-              <p>65zł</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h3>Combo</h3>
-            </td>
-            <td>
-              <p>80zł</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h3>Combo po królewsku</h3>
-            </td>
-            <td>
-              <p>120 zł</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h3>Łysy z brodą</h3>
-            </td>
-            <td>
-              <p>50zł</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h3>Ojciec + syn do lat 13</h3>
-            </td>
-            <td>
-              <p>60zł</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h3>Pielęgnacja</h3>
-            </td>
-            <td>
-              <p>40zł</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h3>Depilacja woskiem/Opalanie uszu</h3>
-            </td>
-            <td>
-              <p>75zł</p>
-            </td>
-          </tr>
-        </table>
+        <div class="table-container">
+          <table>
+            <caption>
+              <h2>Nasz cennik</h2>
+            </caption>
+            <tr>
+              <td>
+                <h3>Strzyżenie klasyczne</h3>
+              </td>
+              <td>
+                <p>40zł</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h3>Strzyżenie włosów długich</h3>
+              </td>
+              <td>
+                <p>50zł</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h3>Strzyżenie dzieci do lat 13</h3>
+              </td>
+              <td>
+                <p>30zł</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h3>Odświeżanie brody</h3>
+              </td>
+              <td>
+                <p>40zł</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h3>Konturowanie brody</h3>
+              </td>
+              <td>
+                <p>25zł</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h3>Repigmentacja brody</h3>
+              </td>
+              <td>
+                <p>30zł</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h3>Broda po królewsku</h3>
+              </td>
+              <td>
+                <p>65zł</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h3>Combo</h3>
+              </td>
+              <td>
+                <p>80zł</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h3>Combo po królewsku</h3>
+              </td>
+              <td>
+                <p>120 zł</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h3>Łysy z brodą</h3>
+              </td>
+              <td>
+                <p>50zł</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h3>Ojciec + syn do lat 13</h3>
+              </td>
+              <td>
+                <p>60zł</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h3>Pielęgnacja</h3>
+              </td>
+              <td>
+                <p>40zł</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h3>Depilacja woskiem/Opalanie uszu</h3>
+              </td>
+              <td>
+                <p>75zł</p>
+              </td>
+            </tr>
+          </table>
+        </div>
         <div class="picture-container">
           <img src="zdjecia/services-photo.jpg" class="services-photo" />
           <img src="zdjecia/services-photo-2.jpg" class="services-photo-n2" />
